<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="25dp"
        android:background="#073642">
        <RelativeLayout
            android:id="@+id/mainContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">
            <LinearLayout
                android:id="@+id/addressContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:id="@+id/updated_at"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="#159cbd"
                    android:text="@string/refresh_date"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/overviewContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true">
                <TextView
                    android:layout_marginBottom="10sp"
                    android:id="@+id/temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|top"
                    android:text="@string/temperature"
                    android:textColor="#159cbd"
                    android:textSize="70sp" />
                <TextView
                    android:layout_marginBottom="130sp"
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:layout_gravity="center"
                    android:text="@string/weather_type"
                    android:textColor="#159cbd"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/temp_min"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/min_temperature"
                        android:textColor="#159cbd"/>
                    <Space
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/temp_max"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/max_temperature"
                        android:textColor="#159cbd"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">
                    <Space
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:layout_marginTop="20sp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="8dp"
                        android:background="#0b5365">
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/sunrise" />
                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="5dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:text="@string/sunrise"
                            android:textColor="#159cbd"/>
                        <TextView
                            android:id="@+id/sunrise"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sunrise_time"
                            android:textColor="#159cbd"
                            android:textSize="15sp" />
                    </LinearLayout>
                    <Space
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:layout_marginTop="20sp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="8dp"
                        android:background="#0b5365">
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/sunset" />
                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="5dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:text="@string/sunset"
                            android:textColor="#159cbd"/>
                        <TextView
                            android:id="@+id/sunset"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sunset_time"
                            android:textColor="#159cbd"
                            android:textSize="15sp" />
                    </LinearLayout>
                    <Space
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/detailsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentBottom="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="8dp"
                        android:background="#0b5365">
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/wind" />
                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="10dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:text="@string/wind"
                            android:textColor="#159cbd"/>
                        <TextView
                            android:id="@+id/wind"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:text="@string/wind_power"
                            android:textColor="#159cbd"/>
                    </LinearLayout>
                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="8dp"
                        android:background="#0b5365">
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/pressure" />
                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="10dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:text="@string/pressure"
                            android:textColor="#159cbd"/>
                        <TextView
                            android:id="@+id/pressure"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:text="@string/pressure_power"
                            android:textColor="#159cbd"/>
                    </LinearLayout>
                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="8dp"
                        android:background="#0b5365">
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/humidity"/>
                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="10dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:text="@string/humidity"
                            android:textColor="#159cbd"/>
                        <TextView
                            android:id="@+id/humidity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:text="@string/humidity_power"
                            android:textColor="#159cbd"/>
                    </LinearLayout>
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="10dp"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
        <ProgressBar
            android:id="@+id/loader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/errorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:textSize="15sp"
            android:text="@string/error_msg"
            android:textColor="#159cbd"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>